kubernetes/apps/peanut/peanut.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: peanut
  labels:
    app.kubernetes.io/name: peanut
    app.kubernetes.io/instance: peanut
    ingress.svc.egress: allow # <--- opt-in label for ingress-controller traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scrape-from-vmagent
  namespace: peanut
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: peanut
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cozy-monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tenant-root
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
